--- a/fixxo/src/App.css
+++ b/fixxo/src/App.css
@@ -1,1 +1,121 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap");
+html, body {
+  font-size: 1em;
+  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.5;
+  background-color: #ffffff;
+  color: #222529;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+}
+header #logotype {
+  grid-area: logotype;
+  font-size: 35px;
+  font-weight: 700;
+  color: #222529;
+  text-decoration: none;
+}
+header #menu {
+  grid-area: menu;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "menulinks" "menuicons";
+}
+@media (min-width: 960px) {
+  header #menu {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "menulinks menuicons";
+  }
+}
+header #menu .menu-links {
+  grid-area: menulinks;
+}
+@media (min-width: 960px) {
+  header #menu .menu-links {
+    text-align: center;
+  }
+}
+header #menu .menu-icons {
+  grid-area: menuicons;
+  text-align: center;
+}
+@media (min-width: 960px) {
+  header #menu .menu-icons {
+    text-align: right;
+  }
+}
+header #toggle-icon {
+  grid-area: toggleicon;
+  display: block;
+  text-align: right;
+}
+@media (min-width: 960px) {
+  header #toggle-icon {
+    display: none;
+  }
+}
+header .container {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "logotype toggleicon" "menu menu";
+}
+@media (min-width: 960px) {
+  header .container {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "logotype menu menu";
+  }
+}
+header .links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header .links .link {
+  color: #222529;
+  font-weight: 500;
+  text-decoration: none;
+  margin: 10px 12px;
+}
+header .links .link:hover, header .links .link.active {
+  color: #ff7373;
+  text-decoration: none;
+}
+header .icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 960px) {
+  header .icons {
+    justify-content: flex-end;
+  }
+}
+header .icons .link {
+  position: relative;
+  height: 36px;
+  width: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  margin-left: 1rem;
+  text-decoration: none;
+  background-color: #ffffff;
+  color: #222529;
+  transition: background-color 0.25s, color 0.2s;
+}
+header .icons .link:hover, header .icons .link.active {
+  background-color: #222529;
+  color: #f5f5f5;
+  text-decoration: none;
+}
