--- a/fixxo/scss/App.scss
+++ b/fixxo/scss/App.scss
@@ -6,3 +6,4 @@
 // components
 @import './components/utilities';
 @import './components/partials/header';
+@import './components/partials/showcase';
