--- a/fixxo/scss/App.scss
+++ b/fixxo/scss/App.scss
@@ -5,5 +5,6 @@
 
 // components
 @import './components/utilities';
+@import './components/buttons';
 @import './components/partials/header';
 @import './components/partials/showcase';
