--- a/fixxo/scss/core/_mixins.scss
+++ b/fixxo/scss/core/_mixins.scss
@@ -43,6 +43,13 @@
     font-family: $font-poppins;
     line-height: $font-lineheight-standard;
     margin-bottom: 0.6em;
+
+    @include lg {
+        font-size: 3em;
+    }
+    @include xl {
+        font-size: 4.063em;
+    }
 }
 @mixin font-title-2 {
     font-size: 1.5em;
@@ -50,6 +57,13 @@
     font-family: $font-poppins;
     line-height: $font-lineheight-small;
     margin-bottom: 0.6em;
+
+    @include lg {
+        font-size: 1.9em;
+    }
+    @include xl {
+        font-size: 2.188em;
+    }
 }
 @mixin font-title-3 {
     font-size: 1em;
@@ -57,6 +71,13 @@
     font-family: $font-poppins;
     line-height: $font-lineheight-standard;
     margin-bottom: 1.5em;
+
+    @include lg {
+        font-size: 1.1em;
+    }
+    @include xl {
+        font-size: 1.250em;
+    }
 }
 
 @mixin color-default {
