--- a/fixxo/src/App.css
+++ b/fixxo/src/App.css
@@ -12,6 +12,46 @@ html, body {
   display: none;
 }
 
+button {
+  border: none;
+}
+
+.btn-theme {
+  position: relative;
+  background-color: #ff7373;
+  color: #f5f5f5;
+  padding: 20px 80px;
+  text-decoration: none;
+  font-size: 1.2em;
+  display: inline-block;
+  transition: background-color 0.25s;
+}
+.btn-theme::before {
+  content: "";
+  border-top: 2px solid #f5f5f5;
+  border-left: 2px solid #f5f5f5;
+  height: 25px;
+  width: 25px;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+}
+.btn-theme::after {
+  content: "";
+  border-bottom: 2px solid #f5f5f5;
+  border-right: 2px solid #f5f5f5;
+  height: 25px;
+  width: 25px;
+  position: absolute;
+  bottom: 12px;
+  right: 12px;
+}
+.btn-theme:hover {
+  background-color: #222529;
+  color: #f5f5f5;
+  text-decoration: none;
+}
+
 header {
   position: sticky;
   top: 0;
@@ -124,4 +164,87 @@ header .icons .link:hover, header .icons .link.active {
 .showcase {
   background-color: #f3f3f3;
   background: linear-gradient(90deg, #f3f3f3 0%, #f5f5f5 100%);
+}
+.showcase .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+@media (min-width: 1140px) {
+  .showcase .container {
+    justify-content: space-between;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+.showcase .content {
+  text-align: center;
+}
+@media (min-width: 1140px) {
+  .showcase .content {
+    text-align: left;
+  }
+}
+.showcase .content .title-1 {
+  font-size: 2.5em;
+  font-weight: 900;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.5;
+  margin-bottom: 0.6em;
+}
+@media (min-width: 960px) {
+  .showcase .content .title-1 {
+    font-size: 3em;
+  }
+}
+@media (min-width: 1140px) {
+  .showcase .content .title-1 {
+    font-size: 4.063em;
+  }
+}
+.showcase .content .title-2 {
+  font-size: 1.5em;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  line-height: 1;
+  margin-bottom: 0.6em;
+}
+@media (min-width: 960px) {
+  .showcase .content .title-2 {
+    font-size: 1.9em;
+  }
+}
+@media (min-width: 1140px) {
+  .showcase .content .title-2 {
+    font-size: 2.188em;
+  }
+}
+.showcase .content .title-3 {
+  font-size: 1em;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.5;
+  margin-bottom: 1.5em;
+}
+@media (min-width: 960px) {
+  .showcase .content .title-3 {
+    font-size: 1.1em;
+  }
+}
+@media (min-width: 1140px) {
+  .showcase .content .title-3 {
+    font-size: 1.25em;
+  }
+}
+.showcase img {
+  display: none;
+  max-height: 745px;
+  width: auto;
+}
+@media (min-width: 1140px) {
+  .showcase img {
+    display: block;
+  }
 }
