--- a/fixxo/scss/App.scss
+++ b/fixxo/scss/App.scss
@@ -8,3 +8,4 @@
 @import './components/buttons';
 @import './components/partials/header';
 @import './components/partials/showcase';
+@import './components/partials/collection';
