--- a/fixxo/scss/core/_mixins.scss
+++ b/fixxo/scss/core/_mixins.scss
@@ -1,25 +1,25 @@
 @mixin md {
-    @media (min-width: $minmaxwidth-md) {
+    @media (min-width: $breakpoint-md) {
         @content
     }
 }
 @mixin lg {
-    @media (min-width: $minmaxwidth-lg) {
+    @media (min-width: $breakpoint-lg) {
         @content
     }
 }
 @mixin xl {
-    @media (min-width: $minmaxwidth-xl) {
+    @media (min-width: $breakpoint-xl) {
         @content
     }
 }
 @mixin xxl {
-    @media (min-width: $minmaxwidth-xxl) {
+    @media (min-width: $breakpoint-xxl) {
         @content
     }
 }
 @mixin xxxl {
-    @media (min-width: $minmaxwidth-xxxl) {
+    @media (min-width: $breakpoint-xxxl) {
         @content
     }
 }
