--- a/fixxo/src/App.css
+++ b/fixxo/src/App.css
@@ -12,6 +12,46 @@ html, body {
   display: none;
 }
 
+@media (min-width: 992px) {
+  .links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.links .link {
+  color: #222529;
+  font-weight: 500;
+  text-decoration: none;
+  margin: 10px 12px;
+  display: block;
+}
+.links .link:hover, .links .link.active {
+  color: #ff7373;
+  text-decoration: none;
+}
+
+.icons .link {
+  position: relative;
+  height: 36px;
+  width: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  margin: 5px;
+  text-decoration: none;
+  background-color: #ffffff;
+  color: #222529;
+  transition: background-color 0.25s, color 0.2s;
+}
+.icons .link:hover, .icons .link.active {
+  background-color: #222529;
+  color: #f5f5f5;
+  text-decoration: none;
+}
+
 button {
   border: none;
 }
@@ -119,46 +159,18 @@ header .container {
     align-items: center;
   }
 }
-header .links .link {
-  color: #222529;
-  font-weight: 500;
-  text-decoration: none;
-  margin: 10px 12px;
-  display: block;
-}
-header .links .link:hover, header .links .link.active {
-  color: #ff7373;
-  text-decoration: none;
-}
 header .icons {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+header .icons .link {
+  margin-left: 1rem;
+}
 @media (min-width: 992px) {
   header .icons {
     justify-content: flex-end;
   }
-}
-header .icons .link {
-  position: relative;
-  height: 36px;
-  width: 36px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  margin-left: 1rem;
-  text-decoration: none;
-  background-color: #ffffff;
-  color: #222529;
-  transition: background-color 0.25s, color 0.2s;
-}
-header .icons .link:hover, header .icons .link.active {
-  background-color: #222529;
-  color: #f5f5f5;
-  text-decoration: none;
 }
 
 .showcase {
