Lektion 2 (ASP.NET MVC & Webbdesign)

--- a/fixxo/scss/components/partials/_collection.scss
+++ b/fixxo/scss/components/partials/_collection.scss
@@ -25,5 +25,9 @@
         @include xxl {
             grid-template-columns: 1fr 1fr 1fr 1fr;
         }
+
+        .item {
+            border: 1px solid black;
+        }
     }
 }
