--- a/fixxo/scss/components/partials/_collection.scss
+++ b/fixxo/scss/components/partials/_collection.scss
@@ -48,12 +48,22 @@
 
 
                     .icons {
+                        position: absolute;
+                        right: 0;
+                        top: 0;
 
-                        .link {}
+                        .link {
+                            margin: 15px;
+                            height: 50px;
+                            width: 50px;
+                            font-size: 1.4em;
+                        }
                     }
 
                     .btn-theme {
+                        position: absolute;
                         width: 100%;
+                        bottom: 0;
                     }
                 }
            }
@@ -63,7 +73,9 @@
 
                 .name {}
                 
-                .star-rating {}
+                .star-rating {
+                    text-align: center;
+                }
                 
                 .price{} 
            }
