--- a/fixxo/scss/components/partials/_collection.scss
+++ b/fixxo/scss/components/partials/_collection.scss
@@ -27,7 +27,10 @@
         }
 
         .item {
-            border: 1px solid black;
+
+            &:hover {
+                border: 1px solid red;
+            }
 
            .image-section {
                 position: relative; 
@@ -44,7 +47,6 @@
                     left: 0;
                     height: 100%;
                     width: 100%;
-                    border: 1px solid red;
 
 
                     .icons {
@@ -57,6 +59,12 @@
                             height: 50px;
                             width: 50px;
                             font-size: 1.4em;
+
+                            @include lg {
+                                height: 36px;
+                                width: 36px;
+                                font-size: 1em;
+                            }
                         }
                     }
 
@@ -69,15 +77,45 @@
            }
 
            .body-section {
-                .category {}
+                text-align: center;
 
-                .name {}
-                
-                .star-rating {
-                    text-align: center;
+                .category {
+                    margin-top: 1rem;
+                    color: $color-dark-3;
+                    font-weight: $font-weight-medium;
+                }
+
+                .name {
+                    margin-top: 1rem;
+                    margin-left: 10px;
+                    margin-right: 10px;
+                    color: $color-dark-2;
+                    font-weight: $font-weight-bold;
+                    font-size: 1.4em;
+                    min-height: 70px;
+
+                    @include lg {
+                        font-size: 1.2em;
+                        min-height: 60px;
+                    }
+
                 }
                 
-                .price{} 
+                .star-rating {
+                    margin-top: 1rem;
+                    font-size: 1.8em;
+                }
+                
+                .price{
+                    margin-top: 1rem;
+                    margin-bottom: 1rem;
+                    font-weight: $font-weight-bold;
+                    font-size: 1.5em;
+
+                    @include lg {
+                        font-size: 1.3em;
+                    }
+                } 
            }
         }
     }
