Lektion 2 (ASP.NET MVC & Webbdesign)

--- a/fixxo/scss/components/partials/_collection.scss
+++ b/fixxo/scss/components/partials/_collection.scss
@@ -28,8 +28,15 @@
 
         .item {
 
-            &:hover {
-                border: 1px solid red;
+            @include lg {
+                .image-section .menu {
+                    display: none;
+                }
+                &:hover {
+                    .image-section .menu {
+                        display: block;
+                    }
+                }
             }
 
            .image-section {
@@ -47,7 +54,6 @@
                     left: 0;
                     height: 100%;
                     width: 100%;
-
 
                     .icons {
                         position: absolute;
