Lektion 2 (ASP.NET MVC & Webbdesign)

--- a/fixxo/scss/App.scss
+++ b/fixxo/scss/App.scss
@@ -9,3 +9,4 @@
 @import './components/partials/header';
 @import './components/partials/showcase';
 @import './components/partials/collection';
+@import './components/partials/specialOffers';
