--- a/fixxo/scss/core/_variables.scss
+++ b/fixxo/scss/core/_variables.scss
@@ -24,6 +24,7 @@ $minmaxwidth-xxl: 1320px;
 $minmaxwidth-xxxl: 1680px;
 
 $color-theme: #ff7373;
+$color-red: #ff0000;
 
 $color-dark-1: #000000;
 $color-dark-2: #222529;
