--- a/fixxo/scss/components/partials/_collection.scss
+++ b/fixxo/scss/components/partials/_collection.scss
@@ -12,6 +12,7 @@
     }
     
     .item-collection {
+        margin-bottom: 40px;
         display: grid;
         gap: 30px;
         grid-template-columns: 1fr;
@@ -28,7 +29,7 @@
 
         .item {
 
-            @include lg {
+            @include xl {
                 .image-section .menu {
                     display: none;
                 }
@@ -98,7 +99,7 @@
                     color: $color-dark-2;
                     font-weight: $font-weight-bold;
                     font-size: 1.4em;
-                    min-height: 70px;
+                    min-height: 50px;
 
                     @include lg {
                         font-size: 1.2em;
@@ -108,18 +109,18 @@
                 }
                 
                 .star-rating {
-                    margin-top: 1rem;
-                    font-size: 1.8em;
+                    margin-top: 0.3rem;
+                    font-size: 1.5em;
                 }
                 
                 .price{
-                    margin-top: 1rem;
+                    margin-top: 0.5rem;
                     margin-bottom: 1rem;
-                    font-weight: $font-weight-bold;
-                    font-size: 1.5em;
+                    font-weight: $font-weight-medium;
+                    font-size: 1.3em;
 
                     @include lg {
-                        font-size: 1.3em;
+                        font-size: 1.2em;
                     }
                 } 
            }
