--- a/fixxo/scss/App.scss
+++ b/fixxo/scss/App.scss
@@ -10,3 +10,4 @@
 @import './components/partials/showcase';
 @import './components/partials/collection';
 @import './components/partials/specialOffers';
+@import './components/partials/collectionTwoColumn';
