lektion 5 (forms and data access layers)

--- a/bmerketo/static/scss/components/_base.scss
+++ b/bmerketo/static/scss/components/_base.scss
@@ -10,4 +10,7 @@ html, body {
     opacity: 0.99;
     transform: translateX(-100%);
 }
- 
+
+.invalid {
+    border: 1px solid $color-theme-1 !important;
+} 
