--- a/bmerketo/static/scss/components/_uptosell.scss
+++ b/bmerketo/static/scss/components/_uptosell.scss
@@ -1,27 +1,50 @@
 .up-to-sell {
     background-color: $color-theme-2;
-    padding: 40px 0;
+    padding: 40px 20px;
   
     .collection-grid {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
+        grid-template-areas:    "content"
+                                "item-1" 
+                                "item-2";
         gap: 40px;
 
         @include md {
             grid-template-columns: repeat(2, 1fr);
+            grid-template-areas:    "content content"
+                                    "item-1 item-2";
         }
         @include lg {
             grid-template-columns: repeat(3, 1fr);
+            grid-template-areas:    "item-1 content item-2";
         }
+
+        .item-1 { grid-area: item-1; }
+        .discover { grid-area: content; }
+        .item-2 { grid-area: item-2; }
 
         .collection-content {
             display: flex;
             align-items: center;
             justify-content: center;
+            height: 100%;
             
             .container {
                 text-align: center;
-                padding: 40px;
+                padding: 30px 20px;
+
+                @include md {
+                    padding: 30px 80px;
+                }
+
+                @include lg {
+                    padding: 10px 20px;
+                }
+
+                @include xl {
+                    padding: 30px;
+                }
             }
 
             .title-red {
@@ -51,8 +74,16 @@
             }
             .link {
                 display: block;
-                margin-top: 30px;
+                margin-top: 10px;
                 color: $color-dark-2;
+
+                &:hover {
+                    color: $color-theme-1;
+                }
+
+                @include xl {
+                    margin-top:50px;
+                }
             }
         }
 
