--- a/bmerketo/static/scss/components/_breadcrumb.scss
+++ b/bmerketo/static/scss/components/_breadcrumb.scss
@@ -7,6 +7,7 @@
     }
 
     .container {
+        padding-top: 80px;
         display: flex;
         justify-content: center;
         align-items: center;
