--- a/bmerketo/static/scss/components/_buttons.scss
+++ b/bmerketo/static/scss/components/_buttons.scss
@@ -1,7 +1,7 @@
 .btn-toggle {
     font-family: $font-poppins;
     font-size: 1.8em;
-    padding: 2px 14px;
+    padding: 0 !important;
     background-color: transparent;
     border: none !important;
     
@@ -13,7 +13,7 @@
 .btn-toggle-white {
     font-family: $font-poppins;
     font-size: 1.8em;
-    padding: 2px 14px;
+    padding: 0 !important;
     background-color: transparent;
     border: none !important;
     
