--- a/bmerketo/static/scss/components/_contactform.scss
+++ b/bmerketo/static/scss/components/_contactform.scss
@@ -1,16 +1,16 @@
 .contact-form {
-    margin: 0 0 20px 0;
+    padding: 20px 0 60px 0;
 
     @include lg {
-        margin: 70px 0;
+        padding: 60px 0;
     }
 
     .container {
-        box-shadow: 0 0 0 0 $color-dark-5;
+        border: 0px solid $color-dark-5;
         padding: 30px;
 
-        @include lg {
-            box-shadow: 0 0 5px 1px $color-dark-5;
+        @include md {
+            border: 1px solid $color-dark-5;
         }
     }
 
@@ -20,97 +20,40 @@
 
     form {
         display: grid;
-        gap: 30px;
+        column-gap: 30px;
+        row-gap: 30px;
         grid-template-columns: 1fr;
         grid-template-areas:    "name"
                                 "email"
-                                "phone"
-                                "company"
+                                "phoneNumber"
+                                "companyName"
                                 "message"
-                                "check"
+                                "terms"
                                 "button";
         
         @include lg {
             grid-template-columns: 1fr 1fr;
             grid-template-areas:    "name email"
-                                    "phone company"
+                                    "phoneNumber companyName"
                                     "message message"
-                                    "check check"
+                                    "terms terms"
                                     "button button";
         }
 
-        .name { grid-area: name; }
-        .email { grid-area: email; }
-        .phone { grid-area: phone; }
-        .company { grid-area: company; }
-        .message { grid-area: message; }
-        .checkbox { grid-area: check; }
-        button { grid-area: button; }
+        .name           { grid-area: name; }
+        .email          { grid-area: email; }
+        .phoneNumber    { grid-area: phoneNumber; }
+        .companyName    { grid-area: companyName;}
+        .terms          { grid-area: terms;  margin: 10px 0; }
+        .message        { grid-area: message; }
 
-
-        .form-group {
-            width: 100%;
-
-            label {
-                display: block;
-                margin-bottom: 5px;
-            }
-
-            input {
-                border: 1px solid $color-dark-5;
-                background-color: $color-theme-4;
-                display: block;
-                width: 100%;
-                padding: 10px 15px;
-                outline: 0;
-
-                &:focus {
-                    border: 1px solid $color-dark-4;
-                }
-            }
-
-            textarea {
-                display: block;
-                width: 100%;
-                height: 100px;
-                border: 1px solid $color-dark-5;
-                background-color: $color-theme-4;
-                padding: 10px 15px;
-                resize: none;
-                outline: 0;
-
-                &:focus {
-                    border: 1px solid $color-dark-4;
-                }
-            }
-        }
-
-        .form-checkbox-group {
-            display: flex;
-            justify-content: flex-start;
-            align-items: start;
-
-            input {
-                border: 1px solid $color-dark-5;
-                background-color: $color-theme-4;
-                height: 48px;
-                width: 48px;
-
-                @include md {
-                    align-items: center;
-                    margin-top: 2px;
-                    height: 18px;
-                    width: 18px;
-                }
-            }
-
-            label {
-                margin-left: 10px;
-            }
+        textarea {
+            height: 100px;
+            resize: none;
         }
 
         button {
-
+            grid-area: button;
 
             @include lg {
                 display: flex;
