--- a/bmerketo/static/scss/components/_header.scss
+++ b/bmerketo/static/scss/components/_header.scss
@@ -1,9 +1,10 @@
 header {
-    padding: 10px 0; 
-
-    @include lg {
-        padding: 20px 0;
-    }
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    background-color: $color-white;
+    display: flex;
+    padding: 0 20px;
 
     .container {
         display: flex;
@@ -25,6 +26,15 @@ header {
 
     .logo {
         grid-area: logo; 
+        display: flex;
+        align-items: center;
+        font-size: 27px;
+        font-weight: $font-weight-bold;
+        color: $color-dark-1;
+
+        img {
+            margin-right: 5px;
+        }
     }
 
     .menu-links {
@@ -38,7 +48,7 @@ header {
         width: 0vw;
         padding-top: 80px;
         transform: translateX(0%);
-        transition: all 0.25s;
+        transition: background-color 0.25s;
         font-size: 20px;
         overflow: hidden;
 
@@ -90,6 +100,7 @@ header {
     }
 
     .menu-icons {
+        z-index: 1;
         grid-area: menuicons;
         text-align: center;
         position: fixed;
