--- a/bmerketo/static/scss/components/_newsletter.scss
+++ b/bmerketo/static/scss/components/_newsletter.scss
@@ -1,14 +1,30 @@
 .newsletter {
     font-family: $font-poppins;
     background-color: $color-dark-4;
-    padding: 80px 0;
+    padding: 30px 20px;
+
+    @include md {
+        padding: 50px 20px;
+    }
+
+    @include xl {
+        padding: 80px 20px;
+    }
 
     .container {
         background-color: $color-white;
-        padding: 70px 150px;
+        padding: 40px 20px;
         display: flex;
         justify-content: center;
         align-items: center;
+
+        @include lg {
+            padding: 70px 50px;
+        }
+
+        @include xl {
+            padding: 70px 100px;
+        }
     }
 
     form {
@@ -21,18 +37,30 @@
             width: 100%;
             border-radius: 25px;
             border: 1px solid $color-dark-5;
-            padding: 0 0 0 40px;
+            padding: 0 0 0 20px;
             outline: 0;
             
             &:focus {
                 border: 1px solid $color-dark-4;
             }
+
+            @include md {
+                padding: 0 0 0 40px;
+            }
         }
 
         button {
+            height: 46px;
             position: absolute;
             top: 0; 
             right: 0;
+
+            &::after {
+                @include lg {
+                    margin-left: 15px;
+                    content: 'SUBSCRIBE FOR NEWSLETTER';
+                }
+            }
         }
     }
 }
