--- a/bmerketo/static/scss/style.scss
+++ b/bmerketo/static/scss/style.scss
@@ -5,6 +5,9 @@
 @import './components/base';
 @import './components/buttons';
 @import './components/collectionitem';
+@import './components/collectioncontent';
+@import './components/forms';
+
 @import './components/header';
 @import './components/footer';
 @import './components/breadcrumb';
