lektion 5 (Forms & Data Access Layers)

--- a/bmerketo/WebApp/Views/Home/Index.cshtml
+++ b/bmerketo/WebApp/Views/Home/Index.cshtml
@@ -15,5 +15,5 @@
     <partial name="/Views/Partials/_TopSelling.cshtml" model="Model.TopSelling" />
 }
 
-<partial name="/Views/Partials/_Newsletter.cshtml" />
+<partial name="/Views/Partials/_Newsletter.cshtml" model="Model!.NewsletterForm" />
 
