--- a/lektion-6/WebApp_CustomIndentity/Views/_ViewImports.cshtml
+++ b/lektion-6/WebApp_CustomIndentity/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using WebApp_CustomIndentity
-@using WebApp_CustomIndentity.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
