lektion 8 (identity, roles, web api)

--- a/lektion-8/CustomIdentity/WebApp/Views/Auth/SignIn.cshtml
+++ b/lektion-8/CustomIdentity/WebApp/Views/Auth/SignIn.cshtml
@@ -1,9 +1,11 @@
 ﻿@using WebApp.ViewModels;
-@model SignUpViewModel
+@model SignInViewModel
 
 <div class="container mt-5">
     <div class="d-flex justify-content-center">
         <form class="col-6" method="post" asp-route-ReturnUrl="@Model.ReturnUrl" novalidate>
+            <div asp-validation-summary="ModelOnly"></div>
+
             <div class="mb-3">
                 <label asp-for="Email" class="form-label"></label>
                 <input asp-for="Email" class="form-control" />
@@ -14,13 +16,8 @@
                 <input asp-for="Password" class="form-control" />
                 <small><span asp-validation-for="Password" class="text-danger"></span></small>
             </div>
-            <div class="mb-3">
-                <label asp-for="ConfirmPassword" class="form-label"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <small><span asp-validation-for="ConfirmPassword" class="text-danger"></span></small>
-            </div>
             <div class="d-grid">
-                <button type="submit" class="btn btn-success">REGISTRERA</button>
+                <button type="submit" class="btn btn-success">LOGGA IN</button>
             </div>
         </form>
     </div>
